--- a/front/index.html
+++ b/front/index.html
@@ -43,7 +43,7 @@
         <div class="navbar-actions">
             <button class="navbar-button login">Connexion</button>
             <button class="navbar-button signup">Inscription</button>
-            <input type="text" class="navbar-search" placeholder="Search...">
+            <input type="text" class="navbar-search" placeholder="Rechercher votre Pokémon">
         </div>
     </div>
 </nav>
@@ -161,7 +161,7 @@
     <div id="add-pokemon-to-team-modal" class="modal">
       <div class="modal-content" id="add-pokemon-to-team-modal-content">
         <span class="close-btn">&times;</span>
-        <h2>Ajouter Pokémon à l'équipe</h2>
+        <h2>Ajouter un Pokémon à l'équipe</h2>
        
         <form id="add-pokemon-to-team-form">
           <div class="form-group">
@@ -171,7 +171,7 @@
             </select>
           </div>
           <input type="hidden" id="pokemon-id-to-add" name="pokemon-id-to-add">
-          <button id= "add-pokemon-to-team-btn" type="submit" >Ajouter à l'équipe</button>
+          <button  id= "add-pokemon-to-team-btn" type="submit" > <img src="./assets/icons/pokeball.svg" alt="Ajouter à l'équipe"></button>
         </form>
       </div>
     </div>
